--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
                             <span class="tower-icon">⚡</span>
                             <span class="tower-price">$120</span>
                         </div>
+                        <div class="mobile-tower-btn" data-type="fire">
+                            <span class="tower-icon">🔥</span>
+                            <span class="tower-price">$110</span>
+                        </div>
+                        <div class="mobile-tower-btn" data-type="ice">
+                            <span class="tower-icon">❄️</span>
+                            <span class="tower-price">$105</span>
+                        </div>
+                        <div class="mobile-tower-btn" data-type="poison">
+                            <span class="tower-icon">☣️</span>
+                            <span class="tower-price">$95</span>
+                        </div>
+                        <div class="mobile-tower-btn" data-type="lightning">
+                            <span class="tower-icon">⚡</span>
+                            <span class="tower-price">$125</span>
+                        </div>
                     </div>
                     <div class="mobile-wave-info">
                         <span id="mobileWaveInfo">Tap Start to begin</span>
@@ -86,6 +102,31 @@
                         <span class="tower-name">Laser</span>
                         <span class="tower-cost">$120</span>
                         <span class="tower-stats">DMG: 35, Fast</span>
+                    </div>
+                    <div class="tower-option" id="fireTower" data-type="fire">
+                        <span class="tower-name">Fire</span>
+                        <span class="tower-cost">$110</span>
+                        <span class="tower-stats">DMG: 70, Burn</span>
+                    </div>
+                    <div class="tower-option" id="iceTower" data-type="ice">
+                        <span class="tower-name">Ice</span>
+                        <span class="tower-cost">$105</span>
+                        <span class="tower-stats">DMG: 60, Slow</span>
+                    </div>
+                    <div class="tower-option" id="poisonTower" data-type="poison">
+                        <span class="tower-name">Poison</span>
+                        <span class="tower-cost">$95</span>
+                        <span class="tower-stats">DMG: 50, DOT</span>
+                    </div>
+                    <div class="tower-option" id="lightningTower" data-type="lightning">
+                        <span class="tower-name">Lightning</span>
+                        <span class="tower-cost">$125</span>
+                        <span class="tower-stats">DMG: 85, Chain</span>
+                    </div>
+                    <div class="tower-option" id="amplifierTower" data-type="amplifier">
+                        <span class="tower-name">Amplifier</span>
+                        <span class="tower-cost">$120</span>
+                        <span class="tower-stats">Support, +50% DMG</span>
                     </div>
                 </div>
                 <div class="wave-info" id="waveInfo">
